[tool.poetry]
name = "mcp-client"
version = "0.1.0"
description = ""
authors = ["Guilherme Simas <gsimas.souza@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
mcp = "^1.6.0"
groq = "^0.22.0"
python-dotenv = "^1.1.0"
httpx = ">=0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
